Delete library book option in header menu

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -636,6 +636,10 @@
                                     <span id="reorderChaptersIcon"></span>
                                     <span class="i18n">__MSG_menu_Reorder_Chapters__</span>
                                 </div>
+                                <div class="menu-item library-only" id="deleteLibraryBookMenuItem">
+                                    <span id="deleteLibraryBookIcon"></span>
+                                    <span class="i18n">__MSG_button_Lib_Template_Delete_EPUB__</span>
+                                </div>
                             </div>
                         </div>
                     </div>
