Add cancel button for bulk chapter url editing

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -595,6 +595,7 @@
           </div>
           <div>
             <button id="applyChangesButton" hidden="true">__MSG_button_Apply_Changes__</button>
+            <button id="cancelEditButton" hidden="true">__MSG_button_error_Cancel__</button>
             <p id="editURLsHint" class="i18n" hidden="true">__MSG_label_Edit_URLs_Hint__</p>
           </div>
           <div>
@@ -602,6 +603,7 @@
               <textarea id="editChaptersUrlsInput" class="allSpace" cols="200" rows="20" hidden="true"></textarea>
             </div>
             <button id="applyChangesButton2" hidden="true">__MSG_button_Apply_Changes__</button>
+            <button id="cancelEditButton2" hidden="true">__MSG_button_error_Cancel__</button>
           </div>
         </section>
 
