--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -622,25 +622,33 @@
                         <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
                             <span id="headerMoreActionsIcon"></span>
                             <div class="header-more-actions-menu" id="headerMoreActionsMenu">
+                                <div class="menu-item library-only" id="downloadLibraryBookMenuItem">
+                                    <span id="downloadLibraryBookIcon"></span>
+                                    <span class="i18n">__MSG_button_Lib_Template_Download_EPUB__</span>
+                                </div>
+                                <div class="menu-item library-only" id="reorderChaptersMenuItem">
+                                    <span id="reorderChaptersIcon"></span>
+                                    <span class="i18n">__MSG_menu_Reorder_Chapters__</span>
+                                </div>
+                                <div class="menu-item library-only" id="toggleLibraryChaptersMenuItem">
+                                    <span id="toggleLibraryChaptersIcon"></span>
+                                    <span id="toggleLibraryChaptersText">__MSG_menu_Hide_Library_Chapters__</span>
+                                </div>
+                                <div class="menu-item library-only" id="deleteLibraryBookMenuItem">
+                                    <span id="deleteLibraryBookIcon"></span>
+                                    <span class="i18n">__MSG_button_Lib_Template_Delete_EPUB__</span>
+                                </div>
                                 <div class="menu-item" id="deleteSelectedChaptersMenuItem">
                                     <span id="deleteSelectedChaptersIcon"></span>
                                     <span>Delete Selected Chapters</span>
                                 </div>
-                                <div class="menu-item" id="deleteAllChaptersMenuItem">
+                                <div class="menu-item non-library-only" id="deleteAllChaptersMenuItem">
                                     <span id="deleteAllChaptersIcon"></span>
                                     <span>Delete All Chapters on Page</span>
                                 </div>
                                 <div class="menu-item" id="downloadSelectedChaptersHtml">
                                   <span id="downloadSelectedHtmlIcon"></span>
                                   <span>Download Selected Chapters as Individual HTML Files</span>
-                                </div>
-                                <div class="menu-item library-only" id="reorderChaptersMenuItem">
-                                    <span id="reorderChaptersIcon"></span>
-                                    <span class="i18n">__MSG_menu_Reorder_Chapters__</span>
-                                </div>
-                                <div class="menu-item library-only" id="deleteLibraryBookMenuItem">
-                                    <span id="deleteLibraryBookIcon"></span>
-                                    <span class="i18n">__MSG_button_Lib_Template_Delete_EPUB__</span>
                                 </div>
                             </div>
                         </div>
