--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -357,6 +357,10 @@
                     <td><input id="noDownloadPopupCheckbox" type="checkbox" name="noDownloadPopupCheckbox" value="false"></td>
                     <td>__MSG_label_No_Download_Popup__</td>
                 </tr>
+                <tr id="disableShiftClickAlertRow">
+                    <td><input id="disableShiftClickAlertCheckbox" type="checkbox" name="disableShiftClickAlertCheckbox" value="false"></td>
+                    <td>__MSG_label_Disable_Shift_Click_Alert__</td>
+                </tr>
                 <tr id="writeErrorHistoryToFileRow">
                     <td><input id="writeErrorHistoryToFileCheckbox" type="checkbox" name="writeErrorHistoryToFileCheckbox" value="false"></td>
                     <td>__MSG_label_Write_Error_History_To_File__</td>
