--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -771,6 +771,7 @@
         <script src="js/UserPreferences.js"></script>
         <script src="js/EpubMetaInfo.js"></script>
         <script src="js/ErrorLog.js"></script>
+        <script src="js/EpubStructure.js"></script>
         <script src="js/Util.js"></script>
         <script src="js/FootnoteExtractor.js"></script>
         <script src="js/Firefox.js"></script>
