--- a/unitTest/Tests.html
+++ b/unitTest/Tests.html
@@ -16,10 +16,12 @@
     <!-- App Source Files -->
     <script src="polyfillChrome.js"></script>
     <script src="TestUtils.js"></script>
+    <script src="../plugin/js/UIText.js"></script>
     <script src="../plugin/js/ReadingList.js"></script>
     <script src="../plugin/js/UserPreferences.js"></script>
     <script src="../plugin/js/EpubMetaInfo.js"></script>
     <script src="../plugin/js/ErrorLog.js"></script>
+    <script src="../plugin/js/EpubStructure.js"></script>
     <script src="../plugin/js/Util.js"></script>
     <script src="../plugin/js/Firefox.js"></script>
     <script src="../plugin/js/DebugUtil.js"></script>
