--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -542,7 +542,7 @@
                     <div class="chapter-title-column i18n">__MSG_column_Title__</div>
                     <div class="chapter-url-column i18n" hidden="true">__MSG_column_URL__</div>
                     <div class="chapter-status-column">
-                        <div class="header-more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
+                        <div class="more-actions-wrapper clickable-icon" id="headerMoreActionsWrapper">
                             <span id="headerMoreActionsIcon"></span>
                             <div class="header-more-actions-menu" id="headerMoreActionsMenu">
                                 <div class="menu-item library-only" id="downloadLibraryBookMenuItem">
@@ -754,7 +754,7 @@
 
     <div id="sbOptions" class="sidebar">
         <div class="sidebar-close-wrapper">
-            <div id="sbClose" class="clickable-icon sidebar-close">
+            <div id="sbClose" class="clickable-icon">
                 <span id="sbCloseIcon"></span>
             </div>
         </div>
