Actually clean up expired cached entries sometimes

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -635,6 +635,12 @@
                             <button id="clearAllCacheButton" class="i18n">__MSG_button_Delete_All_Cached_Chapters__</button>
                         </div>
                     </div>
+                    <div class="options-modal-row">
+                        <div class="options-modal-label"></div>
+                        <div class="options-modal-value">
+                            <button id="cleanupExpiredCacheButton" class="i18n">__MSG_button_Cleanup_Expired_Entries__</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
