Fix various section visibility toggling inconsistencies

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -516,17 +516,20 @@
               </div>
             </div>
           </div>
+        </section>
+
+        <section id="bulkEditSection" hidden="true">
           <div>
-            <button id="applyChangesButton" hidden="true">__MSG_button_Apply_Changes__</button>
-            <button id="cancelEditButton" hidden="true">__MSG_button_error_Cancel__</button>
-            <p id="editURLsHint" class="i18n" hidden="true">__MSG_label_Edit_URLs_Hint__</p>
+            <button id="applyChangesButton">__MSG_button_Apply_Changes__</button>
+            <button id="cancelEditButton">__MSG_button_error_Cancel__</button>
+            <p id="editURLsHint" class="i18n">__MSG_label_Edit_URLs_Hint__</p>
           </div>
           <div>
             <div>
-              <textarea id="editChaptersUrlsInput" class="allSpace" cols="200" rows="20" hidden="true"></textarea>
+              <textarea id="editChaptersUrlsInput" class="allSpace" cols="200" rows="20"></textarea>
             </div>
-            <button id="applyChangesButton2" hidden="true">__MSG_button_Apply_Changes__</button>
-            <button id="cancelEditButton2" hidden="true">__MSG_button_error_Cancel__</button>
+            <button id="applyChangesButton2">__MSG_button_Apply_Changes__</button>
+            <button id="cancelEditButton2">__MSG_button_error_Cancel__</button>
           </div>
         </section>
 
