--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -642,6 +642,7 @@
         <script src="js/parsers/DefaultParser.js"></script>
         <script src="js/parsers/DeviantArtParser.js"></script>
         <script src="js/parsers/DiurnisParser.js"></script>
+        <script src="js/parsers/DudushugeParser.js"></script>
         <script src="js/parsers/DummynovelsParser.js"></script>
         <script src="js/parsers/EdanglarstranslationsParser.js"></script>
         <script src="js/parsers/EightMusesParser.js"></script>
