Add site https://www.empirenovel.com/
See: https://github.com/dteviot/WebToEpub/issues/2121

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -646,6 +646,7 @@
         <script src="js/parsers/DummynovelsParser.js"></script>
         <script src="js/parsers/EdanglarstranslationsParser.js"></script>
         <script src="js/parsers/EightMusesParser.js"></script>
+        <script src="js/parsers/EmpirenovelParser.js"></script>
         <script src="js/parsers/EngnovelParser.js"></script>
         <script src="js/parsers/ErofusParser.js"></script>
         <script src="js/parsers/EstarParser.js"></script>
